# gototerm

./: Cargo.toml  LICENSE  README.md  build.rs  config.example.toml  config.windows.example.toml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
assets/: icon128.rgba
assets/shell-integration/: osc7.bash  osc7.fish  osc7.ps1  osc7.zsh
docs/: gt-protocol.md  workbench-v2.md
docs/codex-goals/: phase1-sidebar.md  phase1-verify.md  phase10-verify.md  phase10-workbench-layout.md  phase11-configurable-keybindings.md  phase13-project-launcher.md  phase14-search-and-agent-launcher.md  phase15-viewer-diff.md  phase2-file-watch.md  phase2-verify.md  phase3-live-preview.md  phase3-verify.md  phase4-clickable-paths.md  phase4-verify.md  phase5-edit-in-pane.md  phase5-verify.md  phase6-file-browser.md  phase6-verify.md  phase7-preview-redesign.md  phase7-verify.md  phase8a-osc7-remote-detect.md  phase8a-verify.md  phase8b-gt-hooks.md  phase8b-verify.md  phase9-keyboard-nav.md  phase9-verify.md
src/: bookmarks.rs  cache.rs  config.rs  file_style.rs  font.rs  gt.rs  highlight.rs  keybindings.rs  launcher.rs  lib.rs  main.rs  multiplexer.rs  preview.rs  reader.rs  recent.rs  session_review.rs  sidebar.rs  sixel.rs  terminal.rs  timeline.rs  utils.rs  view.rs  vt.rs  watcher.rs  window.rs  workspace.rs
src/shaders/: cell.frag
