[package]
name = "gototerm"
version = "0.6.2"
authors = ["mamagotolab"]
edition = "2021"
description = "日本語入力のストレスが少ない、AI開発ワークベンチ付き軽量ターミナル（Sixel 画像対応）"
license = "MIT"
repository = "https://github.com/mamagotolab/gototerm"
homepage = "https://mamagotolab.com"
readme = "README.md"
keywords = ["terminal", "wayland", "ime", "japanese", "sixel"]
categories = ["command-line-utilities"]

[[bin]]
name = "gototerm"
path = "src/main.rs"

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_warn"] }
env_logger = "0.11"
portable-pty = "0.8"
unicode-width = "0.1.9"
glium = "0.34"
winit = "0.29"
glutin = "0.31"
glutin-winit = "0.4"
raw-window-handle = "0.5"
freetype-rs = "0.26.0"
serde = { version = "1", features = ["derive"] }
config = { version = "0.13.1", default-features = false, features = ["toml"] }
lazy_static = "1.4.0"
lru = { version = "0.7.8", default-features = false }
notify = "6"
pulldown-cmark = "0.13.4"
# プレビューのシンタックスハイライト。正規表現は純 Rust 実装(fancy-regex)を選ぶ。
# 既定の onig は C ライブラリを引き込む。実測では onig の方が速い（1100行で 40ms 対
# 181ms）が、ハイライトはファイル読み込みと同じ裏スレッドで走らせるので描画は止まらない。
# ビルドに C コンパイラが要らない方を優先する（Windows exe のビルドを壊さないため）。
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
# 画像プレビューのデコード。よく使う形式だけに絞って依存を軽くする。
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

alacritty_terminal = "0.26.0"
vte = "0.15"

# Windows のクリップボードは外部コマンド(wl-copy)が無いので arboard を使う。
# Windows 限定ゲートなので Linux のビルドには影響しない。
[target.'cfg(windows)'.dependencies]
arboard = { version = "3", default-features = false }

# exe にアイコンを埋め込む（build.rs）。ホストが Windows のときだけ使う。
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
